# ocaml-gitlab

./: .gitignore  .ocamlformat  CHANGES.md  LICENSE  Makefile  README.md  _opam  dune  dune-project  gitlab-jsoo.opam  gitlab-unix.opam  gitlab-unix.opam.template  gitlab.opam  gitlab.opam.template  index.html  lab.opam
.github/workflows/: ci.yaml
cli/: api.ml  config.ml  config.ml.in  config.mli  dune  gitconfig_lexer.mll  gitconfig_parser.mly  gitconfig_types.mli  issue.ml  job_artifact.ml  lab.md  lab.ml  main.ml  merge_request.ml  project.ml  project.mli  project_hook.ml  project_hook.mli  runner.ml  test_gitconfig.ml  user.ml  user.mli
cli/gitconfig/: dune  lexer.mll  parser.mly  resolve.ml  resolve.mli  types.mli
doc/: dune  index.mld
gitlab/: index.html
gitlab-jsoo/: index.html
gitlab-jsoo/Gitlab/: index.html
gitlab-jsoo/Gitlab/API/: index.html
gitlab-jsoo/Gitlab/Endpoint/: index.html
gitlab-jsoo/Gitlab/Endpoint/Version/: index.html
gitlab-jsoo/Gitlab/Event/: index.html
gitlab-jsoo/Gitlab/Group/: index.html
gitlab-jsoo/Gitlab/Group/Issue/: index.html
gitlab-jsoo/Gitlab/Group/Milestone/: index.html
gitlab-jsoo/Gitlab/Group/Project/: index.html
gitlab-jsoo/Gitlab/Monad/: index.html
gitlab-jsoo/Gitlab/Project/: index.html
gitlab-jsoo/Gitlab/Project/Branch/: index.html
gitlab-jsoo/Gitlab/Project/Commit/: index.html
gitlab-jsoo/Gitlab/Project/ExternalStatusCheck/: index.html
gitlab-jsoo/Gitlab/Project/Hook/: index.html
gitlab-jsoo/Gitlab/Project/Issue/: index.html
gitlab-jsoo/Gitlab/Project/Milestone/: index.html
gitlab-jsoo/Gitlab/Project/Notes/: index.html
gitlab-jsoo/Gitlab/Project/ProjectAccessToken/: index.html
gitlab-jsoo/Gitlab/Response/: index.html
gitlab-jsoo/Gitlab/Runners/: index.html
gitlab-jsoo/Gitlab/Scope/: index.html
gitlab-jsoo/Gitlab/Stream/: index.html
gitlab-jsoo/Gitlab/Token/: index.html
gitlab-jsoo/Gitlab/User/: index.html
gitlab-jsoo/Gitlab/User/PersonalAccessToken/: index.html
gitlab-unix/: index.html
gitlab-unix/Gitlab/: index.html
gitlab-unix/Gitlab/API/: index.html
gitlab-unix/Gitlab/Endpoint/: index.html
gitlab-unix/Gitlab/Endpoint/Version/: index.html
gitlab-unix/Gitlab/Env/: index.html
gitlab-unix/Gitlab/Event/: index.html
gitlab-unix/Gitlab/Group/: index.html
gitlab-unix/Gitlab/Group/Issue/: index.html
gitlab-unix/Gitlab/Group/Milestone/: index.html
gitlab-unix/Gitlab/Group/Project/: index.html
gitlab-unix/Gitlab/Monad/: index.html
gitlab-unix/Gitlab/Project/: index.html
gitlab-unix/Gitlab/Project/Branch/: index.html
gitlab-unix/Gitlab/Project/Commit/: index.html
gitlab-unix/Gitlab/Project/ExternalStatusCheck/: index.html
gitlab-unix/Gitlab/Project/Hook/: index.html
gitlab-unix/Gitlab/Project/Issue/: index.html
gitlab-unix/Gitlab/Project/Milestone/: index.html
gitlab-unix/Gitlab/Project/Notes/: index.html
gitlab-unix/Gitlab/Project/ProjectAccessToken/: index.html
gitlab-unix/Gitlab/Response/: index.html
gitlab-unix/Gitlab/Runners/: index.html
gitlab-unix/Gitlab/Scope/: index.html
gitlab-unix/Gitlab/Stream/: index.html
gitlab-unix/Gitlab/Token/: index.html
gitlab-unix/Gitlab/User/: index.html
gitlab-unix/Gitlab/User/PersonalAccessToken/: index.html
gitlab/Gitlab_core/: index.html
gitlab/Gitlab_core/Make/: index.html
gitlab/Gitlab_core/Make/API/: index.html
gitlab/Gitlab_core/Make/Endpoint/: index.html
gitlab/Gitlab_core/Make/Event/: index.html
gitlab/Gitlab_core/Make/Group/: index.html
gitlab/Gitlab_core/Make/Monad/: index.html
gitlab/Gitlab_core/Make/Project/: index.html
gitlab/Gitlab_core/Make/Response/: index.html
gitlab/Gitlab_core/Make/Runners/: index.html
gitlab/Gitlab_core/Make/Scope/: index.html
gitlab/Gitlab_core/Make/Stream/: index.html
gitlab/Gitlab_core/Make/Token/: index.html
gitlab/Gitlab_core/Make/User/: index.html
gitlab/Gitlab_core/Make/argument-1-Env/: index.html
gitlab/Gitlab_core/Make/argument-2-Time/: index.html
gitlab/Gitlab_j/: index.html
gitlab/Gitlab_json/: index.html
gitlab/Gitlab_json/Adapter/: index.html
gitlab/Gitlab_json/Date/: index.html
gitlab/Gitlab_json/DateTime/: index.html
gitlab/Gitlab_s/: index.html
gitlab/Gitlab_s/module-type-Env/: index.html
gitlab/Gitlab_s/module-type-Gitlab/: index.html
gitlab/Gitlab_s/module-type-Gitlab/API/: index.html
gitlab/Gitlab_s/module-type-Gitlab/Endpoint/: index.html
gitlab/Gitlab_s/module-type-Gitlab/Event/: index.html
gitlab/Gitlab_s/module-type-Gitlab/Group/: index.html
gitlab/Gitlab_s/module-type-Gitlab/Monad/: index.html
gitlab/Gitlab_s/module-type-Gitlab/Project/: index.html
gitlab/Gitlab_s/module-type-Gitlab/Response/: index.html
gitlab/Gitlab_s/module-type-Time/: index.html
gitlab/Gitlab_t/: index.html
jsoo/: dune  gitlab.ml  gitlab.mli
lab/: index.html
lab/Gitconfig/: index.html
lab/Gitconfig/Lexer/: index.html
lab/Gitconfig/Parser/: index.html
lab/Gitconfig/Resolve/: index.html
lab/Gitconfig/Types/: index.html
lib/: dune  gitlab.atd  gitlab_core.ml  gitlab_core.mli  gitlab_json.ml  gitlab_s.mli
test/: corpus.ml  diff.ml  dune  quickcheck.ml  test.ml
test/cases/branches/: event.json  expected.json
test/cases/commit_statuses/: event.json  expected.json
test/cases/commits/: expected.json
test/cases/current_user/: event.json  expected.json
test/cases/events/: event.json  expected.json  single.json
test/cases/issues/: event.json
test/cases/merge_request_event/: event.json  expected.json
test/cases/merge_requests/: event.json  expected.json
test/cases/milestones/: event.json  expected.json
test/cases/notes/: expected.json
test/cases/project_hook/: event.json  expected.json
test/cases/project_short/: expected.json
test/cases/projects/: event.json  expected.json
test/cases/runners/: event.json  expected.json
test/cases/user/: event.json  expected.json
test/cases/user_short/: event.json  expected.json
test/cases/webhooks/: event.json  expected.json
test/gitconfig/: dune  gitconfig.expected  gitconfig.ml
unix/: dune  gitlab.ml  gitlab.mli
(+35 files in other folders)
