(executable
 (libraries cohttp-lwt-unix gitlab-unix cmdliner otoml)
 (package lab)
 (public_name lab)
 (modules main api config issue merge_request project user)
 (name main))

(executable
 (name test_gitconfig)
 (modules_without_implementation gitconfig_types)
 (modules gitconfig_lexer gitconfig_types gitconfig_parser test_gitconfig))

(ocamllex gitconfig_lexer)

(menhir
 (modules gitconfig_parser))

(mdx
 (files lab.md)
 (package lab)
 (packages lab))
