(rule
 (targets gitlab_t.ml gitlab_t.mli)
 (deps gitlab.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (targets gitlab_j.ml gitlab_j.mli)
 (deps gitlab.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets gitlab_s.ml)
 (deps gitlab_s.mli)
 (action
  (copy %{deps} %{targets})))

(library
 (name gitlab)
 (public_name gitlab)
 (wrapped false)
 (modules gitlab_s gitlab_core gitlab_j gitlab_t gitlab_json)
 (libraries cohttp-lwt uri yojson atdgen str))
